--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
+
+
 <% content_for :title do %>About<% end %>
 <h3>About the Website</h3>
 <p>
@@ -5,3 +7,23 @@ This web application was created with
 <%= link_to('Rails Composer', 'http://railsapps.github.io/rails-composer/') %>
 from the <%= link_to('RailsApps project', 'http://railsapps.github.io/') %>.
 </p>
+
+<div id="tv_chart_container"></div>
+
+
+<script type="text/javascript">
+  showTradingViewChart(
+      {
+//        supports_search: false,
+        width: '100%',
+        autosize: true,
+        fullscreen: false,
+        symbol: 'BBT',
+//        datafeed: new Datafeeds.UDFCompatibleDatafeed("http://localhost"),
+//        https://bittrex.com/Api/v2.0/pub/market/GetTicks?marketName=BTC-WAVES&tickInterval=thirtyMin&_=1499127220008
+//        debug: true,
+//        autosize: true,
+        disabled_features: ["header_saveload"],
+      }
+  );
+</script>
