Chart Library gem

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,7 @@
 
 
 <% content_for :title do %>About<% end %>
-<h3>About the Website</h3>
-<p>
-This web application was created with
-<%= link_to('Rails Composer', 'http://railsapps.github.io/rails-composer/') %>
-from the <%= link_to('RailsApps project', 'http://railsapps.github.io/') %>.
-</p>
+<!--<h3>About the Website</h3>-->
 
 <div id="tv_chart_container"></div>
 
@@ -17,7 +12,7 @@ from the <%= link_to('RailsApps project', 'http://railsapps.github.io/') %>.
 //        supports_search: false,
         width: '100%',
         autosize: true,
-        fullscreen: false,
+        fullscreen: true,
         symbol: 'BBT',
 //        datafeed: new Datafeeds.UDFCompatibleDatafeed("http://localhost"),
 //        https://bittrex.com/Api/v2.0/pub/market/GetTicks?marketName=BTC-WAVES&tickInterval=thirtyMin&_=1499127220008
