--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -14,7 +14,7 @@
         autosize: true,
         fullscreen: true,
         symbol: 'BBT',
-//        datafeed: new Datafeeds.UDFCompatibleDatafeed("http://localhost"),
+        datafeed: new Datafeeds.UDFCompatibleDatafeed("http://<%= request.env["HTTP_HOST"] %>"),
 //        https://bittrex.com/Api/v2.0/pub/market/GetTicks?marketName=BTC-WAVES&tickInterval=thirtyMin&_=1499127220008
 //        debug: true,
 //        autosize: true,
