--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,2 +1,4 @@
 <%# add navigation links to this file %>
 <li><%= link_to 'About', page_path('about') %></li>
+<li><%= link_to 'Api Keys', api_keys_path %></li>
+<li><%= link_to 'Exchanges', exchanges_path %></li>
