--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Orders#index</h1>
 <p>Find me in app/views/orders/index.html.erb</p>
 
-<p><%= @open %></p>
-<p><%= @secret %></p>
+<p><%= @order.open %></p>
+<p><%= @order.secret %></p>
+<p><%= @quote.inspect %></p>
+<p><%= @history.all.inspect %></p>
