--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,7 +1,20 @@
 <h1>Orders#index</h1>
 <p>Find me in app/views/orders/index.html.erb</p>
 
-<p><%= @order.open %></p>
-<p><%= @order.secret %></p>
-<p><%= @quote.inspect %></p>
-<p><%= @history.all.inspect %></p>
+<!--<p><%= @apiKey.open %></p>-->
+<!--<p><%= @apiKey.secret %></p>-->
+<!--<p><%= @quote.inspect %></p>-->
+
+<% @history.each do |history| %>
+  <ul>
+    <li><%= history.exchange %></li>
+    <li><%= history.type %></li>
+    <li><%= history.quantity %></li>
+    <li><%= history.remaining %></li>
+    <li><%= history.price %></li>
+    <li><%= history.total %></li>
+    <li><%= history.fill %></li>
+    <li><%= history.limit %></li>
+    <li><%= history.executed_at %></li>
+  </ul>
+<% end %>
