--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -34,5 +34,5 @@ html lang="en"
         = bootstrap_flash
         = yield
       .footer
-        p © Vizakenjack 2014
+        p © Zex0n
     == render 'templates/analytics'
