--- a/app/views/trades/index.html.slim
+++ b/app/views/trades/index.html.slim
@@ -1,6 +1,6 @@
 .clearfix
 - if can? :create, Trade
-  .col-xs.12
+  .col-xs-12
     .btn-group.pull-right
       button class="btn btn-primary" data-toggle="modal" data-target="#modal-manual-history" 
         span.glyphicon.glyphicon-pencil
