--- a/app/views/wallets/_form.html.slim
+++ b/app/views/wallets/_form.html.slim
@@ -7,6 +7,7 @@
     = f.input :balance
     = f.input :available
     = f.input :pending
+    = f.input :buy_price
 
   .form-actions
     = f.button :submit
