--- a/app/views/api_keys/index.html.slim
+++ b/app/views/api_keys/index.html.slim
@@ -1,3 +1,9 @@
+p
+  = @req.inspect
+
+p
+  = @api_keys[0].inspect
+
 - if @api_keys.any?
   = link_to "Add new API keys", new_api_key_path, class: "btn btn-primary btn-md pull-right"
   h1 Your API keys
@@ -26,5 +32,7 @@
 - else
     h1.text-cnt Enter your API keys.
     p.text-cnt
-      = link_to "Get your API keys here", "https://bittrex.com/Account/ManageApiKey", class: "btn btn-primary btn-lg mr2", target: "_blank"
+      = link_to "Get your API keys here", "https://bittrex.com/Manage#sectionApi", class: "btn btn-primary btn-lg mr2", target: "_blank"
       = link_to "Add new API keys", new_api_key_path, class: "btn btn-success btn-lg"
+
+
