Bid and Ask fields for coins

--- a/app/views/coins/index.html.slim
+++ b/app/views/coins/index.html.slim
@@ -21,6 +21,10 @@
         th
           | Current price
         th
+          | Bid
+        th
+          | Ask
+        th
           | Current volume
         th
           | Exchange
@@ -38,6 +42,10 @@
             = coin.thread
           td
             = price_format coin.current_price
+          td
+            = coin.bid
+          td
+            = coin.ask
           td
             = price_format coin.current_volume
           td
